--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,28 @@
     <title>html-css-spotifyweb</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+
+    <main id="site_main" class="flex">
+
+        <aside class="sidebar"></aside>
+        <!-- /.sidebar -->
+
+        <div class="container_main">
+            <header class="header"></header>
+            <!-- /.header -->
+            <div class="main"></div>
+            <!-- /.main -->
+        </div>
+        <!-- /.container_main -->
+
+    </main>
+    <!-- /#site_main -->
+
+    <footer id="site_footer"></footer>
+    <!-- /#site_footer -->
+
 </body>
+
 </html>
