--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
 
             </div>
             <!-- /.menu_right -->
+
             <div class="menu_center flex">
 
                 <div class="play_top flex">
@@ -398,23 +399,40 @@
                 <!-- /.play_top -->
 
                 <div class="play_bottom flex p_relative">
+
                     <span>0:25</span>
 
-                    <div class="line_dark"></div>
+                    <div class="line_dark line_long_center"></div>
                     <!-- /.line_dark -->
-                    <div class="line_light"></div>
+                    <div class="line_light line_short_center"></div>
                     <!-- /.line_light -->
 
                     <span>4:35</span>
+
                 </div>
                 <!-- /.play_bottom -->
 
             </div>
             <!-- /.menu_center -->
-            <div class="menu_left"></div>
+
+            <div class="menu_left flex p_relative">
+
+                <i class="fa-solid fa-list"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+
+                <div class="line_dark line_long_right"></div>
+                <!-- /.line_dark -->
+
+                <div class="line_light line_short_right"></div>
+                <!-- /.line_light -->
+
+            </div>
             <!-- /.menu_left -->
+
         </div>
         <!-- /.footer flex -->
+        
     </footer>
     <!-- /#site_footer -->
 
