--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
                 <div class="img_aside flex">
 
-                    <img src="./img/logo.svg" alt="logo spotify">
+                    <img src="./img/logo.svg" alt="logo spotify" class="logo">
+                    <img src="./img/logo-small.svg" alt="" class="logo_small">
 
                 </div>
                 <!-- /.img -->
@@ -106,7 +107,7 @@
             </div>
             <!-- /.main_sidebar -->
 
-            <div class="footer_aside flex">
+            <div class="footer_sidebar flex">
 
                 <div class="download_aside flex">
 
