--- a/bonus/index.html
+++ b/bonus/index.html
@@ -90,7 +90,7 @@
 
                     <ul class="list_playlist flex">
 
-                        <li><a href="#">Nome Playlist</a></li>
+                        <li><a href="./playlist.html">Iron Maiden</a></li>
                         <li><a href="#">Nome Playlist</a></li>
                         <li><a href="#">Nome Playlist</a></li>
                         <li><a href="#">Nome Playlist</a></li>
